Don't be lazy, use .cpp!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,20 @@ add_subdirectory(sdk)
 add_subdirectory(network)
 
 include_directories(
-		.
-		pawn/source
-		pawn/source/linux
+	.
+	pawn/source
+	pawn/source/linux
 )
 
 add_definitions(-DHAVE_STDINT_H=1)
 
 add_library(${PROJECT_NAME} SHARED
 	main.cpp
-	natives.cpp
+	weather-natives.cpp
+	weather-component.cpp
+	weather-extension.cpp
+	weather-region.cpp
+	api.cpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
